syntax="proto3";

package api;

option go_package="github.com/winglq/l4proxy/src/api";

import "go-proto-validators/validator.proto";

service ControlService {
  rpc CreateClient(CreateClientRequest) returns (stream Client) {}
  rpc ListClients(ListClientsRequest) returns (ListClientsResponse) {}
  rpc ListBackendServiceUsers(ListBackendServiceUsersRequest) returns (ListBackendServiceUsersResponse) {}

  rpc StartInternalService(StartInternalServiceRequest) returns (InternalService) {}
}

message CreateClientRequest {
  string display_name = 1 [(validator.field) = {rune_lt: 20, human_error: "max length of display name is 20"}];
  int32  internal_port = 2;
  int32  public_port = 3;
  bool   share_public_addr = 4;
}

message ListClientsRequest {
  string page_token = 1;
}

message ListClientsResponse {
  repeated Client clients = 1;
  string next_page_token = 2;
  int32 total_count = 3;
}

message ListBackendServiceUsersRequest {
  string parent = 1;
  string page_token = 2;
}

message ListBackendServiceUsersResponse {
  repeated BackendServiceUser users = 1;
  string next_page_token = 2;
  int32 total_count = 3;
}

message Client {
  string name = 1;
  string token = 2;
  string display_name = 3;
  string internal_address = 4;
  bool   share_public_addr = 5;
  string public_address = 6;
}


message BackendServiceUser {
  string user_addr = 1;
  double speed_in = 2;
  double speed_out = 3;
}

message StartInternalServiceRequest {
  string service_name = 1;
  int32 pub_port = 2;
}

message InternalService {
  string name = 1;
}
